--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Barra RGB -->
         <div class="rgb-bar"></div>
 
-        <p>Sempre estarei aqui ❤🥺</p>
+        <p>Sempre estarei presente, mesmo longe ❤🥺</p>
 
         <div class="spacer"></div>
     </div>
